<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.projects.ProjectActivity">

    <TextView
        android:id="@+id/tvEditProj"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="108dp"
        android:text="@string/editProj"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEditDescription"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/editDescription"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditProj" />

    <TextView
        android:id="@+id/tvEditHours"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="84dp"
        android:text="@string/editHours"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditDescription" />

    <TextView
        android:id="@+id/tvEditDefTask"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/editDefTask"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditHours" />

    <TextView
        android:id="@+id/tvEditColor"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/editColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditDefTask" />

    <Spinner
        android:id="@+id/spinnerEditChangeProj"
        android:layout_width="152dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toEndOf="@+id/tvEditProj"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerEditDefTask"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toEndOf="@+id/tvEditDefTask"
        app:layout_constraintTop_toBottomOf="@+id/ptEditHours" />

    <Spinner
        android:id="@+id/spinnerEditColor"
        android:layout_width="167dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toEndOf="@+id/tvEditColor"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditDefTask" />

    <EditText
        android:id="@+id/mltEditDescription"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toEndOf="@+id/tvEditDescription"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditChangeProj" />

    <EditText
        android:id="@+id/ptEditHours"
        android:layout_width="149dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="324dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editEnterHours"
        app:layout_constraintStart_toEndOf="@+id/tvEditHours"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEditDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/btnEditDelete"
        app:backgroundTint="#DD2E2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>